--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <main>
       <div class="container">
         <div class="input-box">
-          <input type="text" placeholder="0" autofocus />
+          <input type="text" id="input" placeholder="0" disabled />
           <h2 class="result">0</h2>
         </div>
         <div class="buttons-box">
           <button class="reset">C</button>
-          <button>+/-</button>
-          <button>%</button>
+          <button class="plus-min">+/-</button>
+          <button class="percent">%</button>
           <button class="operator">÷</button>
           <button>1</button>
           <button>2</button>
@@ -49,5 +49,7 @@
         </div>
       </div>
     </main>
+
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
